# laudas

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  LICENSE  PLAYBOOK.md  README.md  compression-target.md  demo_bool_predicate.laud  demo_buggy.laud  demo_cex_format.laud  demo_contains_verify.laud  demo_extern.laud  demo_filter_map_verify.laud  demo_fixed.laud  demo_fold.laud  demo_greet.laud  demo_hello.laud  demo_is_empty.laud  demo_let_verify.laud  demo_list_verify.laud  demo_record_verify.laud  demo_records.laud  demo_result_io.laud  demo_specfirst.laud  demo_stdlib.laud  demo_string_verify.laud  demo_use_lib.laud  demo_use_main.laud  demo_v05.laud  design-sketch.md  display-spec.md  examples.laud  laudas.py  lsp_server.py  prd.md  pyproject.toml  research-survey.md  token_test.py  (+1 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  verifier_limit.yml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
examples/: README.md  bars.laud  calc_rpn.laud  cat.laud  crew.csv  csv2json.laud  grep.laud  head.laud  json_pretty.laud  minesweeper.laud  scores.csv  sort.laud  stats.laud  tail.laud  uniq.laud  wc.laud  word_freq.laud
rust/: Cargo.toml  PORT_PLAN.md
rust/src/: main.rs
synthesis/: .gitkeep-synthetic  README.md  generate.py
synthesis/corpus/seed/: 01_safe_div.laud  02_percentage.laud  03_list_pipeline.laud  04_records.laud  (+1 more)
synthesis/prompts/: translate.md
tests/: test_all.py
tree-sitter-laudas/: README.md  grammar.js  package.json
tutorial/: 01_hello.laud  02_examples.laud  03_verifier.laud  04_collections.laud  05_pipeline.laud  06_runnable.laud  07_lib.laud  07_modules.laud  08_ffi.laud  README.md
vscode-laudas/: .vscodeignore  README.md  language-configuration.json  package.json
vscode-laudas/syntaxes/: laudas.tmLanguage.json
